2002-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* mime-type-info.c (get_gconf_base_name): Implement

	* mime-category-edit-dialog.c (fill_dialog): Disable
	use_category_toggle if this is a toplevel category
	(populate_application_list, default_action_changed_cb)
	(use_category_toggled_cb, update_sensitivity): Set widget
	sensitivity based on various values

	* mime-type-info.c (mime_type_info_load_all)
	(mime_category_info_load_all): Check use_[parent_]cat_loaded
	(mime_category_info_load_all): Override use_parent_category with
	FALSE if this is a toplevel category

	* mime-category-edit-dialog.c (store_data, fill_dialog): Get/set
	use_parent_category

	* mime-type-info.c (set_subcategory_ids): Don't set subcategory
	ids unless use_parent_category is set
	(mime_category_info_save, mime_category_info_load_all): Get/set
	use_parent_category
	(reduce_supported_app_list, find_possible_supported_apps): Check
	use_parent_category field

	* mime-edit-dialog.c (choose_cat_cb): Use
	mime_category_info_get_full_name

	* mime-type-info.c (mime_type_info_load_all, mime_type_info_save):
	Rename override_category as use_category; give it the opposite
	meaning
	(reduce_supported_app_list, find_possible_supported_apps): Update
	according to the above
	(set_subcategory_ids): Implement
	(mime_category_info_save): Implement
	(mime_category_info_load_all): Implement
	(mime_category_info_get_full_name): Implement; copy from
	mime_type_info_get_category_name
	(mime_type_info_get_category_name): Call
	mime_category_info_get_full_name

	* mime-edit-dialog.c (fill_dialog): Set
	use_category_defaults_toggle
	(store_data): Set override_category
	(mime_edit_dialog_init): Connect to
	use_category_defaults_toggled_cb
	(use_category_defaults_toggle_cb): Implement
	(default_action_changed_cb, populate_application_list)
	(populate_component_list): Call update_sensitivity; set
	sensitivity-controlling flags
	(update_sensitivity): Implement

	* mime-type-info.c (find_possible_supported_apps)