@@ -2,4 +2,3 @@
  - Fix gnome_url_show
  - Need a way to get all apps in the app registry
  - Better sorting on the MIME types tree
- - Translating category names
