@@ -1,0 +1,16 @@
+/*
+ * Translatable strings file
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
+ */
+
+gchar *s = N_("Audio");
+gchar *s = N_("Video");
+gchar *s = N_("Images");
+gchar *s = N_("Documents");
+gchar *s = N_("Word Processor");
+gchar *s = N_("World Wide Web Page (HTML)");
+gchar *s = N_("Spreadsheet");
+gchar *s = N_("Plain Text");
+gchar *s = N_("Source Code");
+gchar *s = N_("Extended Markup Language (XML)");
