@@ -1,5 +1,8 @@
 2002-01-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* mime-types-model.c (mime_types_model_get_value): Invoke gettext
+	macro on the category name
+
 	* mime-type-info.c (get_gconf_base_name): Implement
 
 	* mime-category-edit-dialog.c (fill_dialog): Disable
